src/tests/data/SemanticErrors/RedefinitionFunc.c

#include <stdio.h>

void f() {}

void f() {} // ERROR

int main()
{
	return 0;
}